tzsetup (1:0.34) UNRELEASED; urgency=low

  * Use "Pohnpei" and "Fernando de Noronha" as names for these
    time zones (not changing the original timezone name in
    Choices-C, though). Closes: #580744
  * Russia has only 9 timezones after the 2010 reform
  * Canada/Yukon dropped: same timezone than Canada/Pacific

 -- Christian Perrier <bubulle@debian.org>  Mon, 14 Feb 2011 19:28:30 +0100

tzsetup (1:0.33) unstable; urgency=low

  [ Updated translations ]
  * Russian (ru.po) by Yuri Kozlov

 -- Christian Perrier <bubulle@debian.org>  Thu, 30 Dec 2010 12:04:53 +0100

tzsetup (1:0.32) unstable; urgency=low

  [ Updated translations ]
  * Lao (lo.po) by Anousak Souphavanh
  * Northern Sami (se.po) by Børre Gaup
  * Sinhala (si.po) by Danishka Navin

 -- Otavio Salvador <otavio@ossystems.com.br>  Fri, 24 Dec 2010 21:36:27 -0200

tzsetup (1:0.31) unstable; urgency=low

  [ Updated translations ]
  * Bengali (bn.po) by Israt Jahan
  * Catalan (ca.po) by Jordi Mallach
  * Icelandic (is.po) by Sveinn í Felli
  * Kazakh (kk.po) by Baurzhan Muftakhidinov

 -- Otavio Salvador <otavio@debian.org>  Fri, 12 Nov 2010 16:32:59 -0200

tzsetup (1:0.30) unstable; urgency=low

  * Team upload.
  [ Updated translations ]
  * Asturian (ast.po) by maacub
  * Bulgarian (bg.po) by Damyan Ivanov
  * Bosnian (bs.po) by Armin Beširović
  * Danish (da.po) by Jacob Sparre Andersen
  * Spanish (es.po) by Christian Perrier.
    This fixes translations for timezoens that are identical
    in Canada, USA and Mexico
    Closes: #558780 
  * Persian (fa.po) by Ebrahim Byagowi
  * Kazakh (kk.po) by Baurzhan Muftakhidinov
  * Telugu (te.po) by Arjuna Rao Chavala

 -- Christian Perrier <bubulle@debian.org>  Sun, 29 Aug 2010 19:08:19 +0200

tzsetup (1:0.29) unstable; urgency=low

  [ Updated translations ]
  * Amharic (am.po) by ተገኝ ተፈራ
  * Asturian (ast.po) by astur
  * Belarusian (be.po) by Viktar Siarheichyk
  * Bengali (bn.po) by Israt Jahan
  * Bosnian (bs.po) by Armin Beširović